Fix logo too small

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -311,7 +311,7 @@ nav button.openbtn {
 }
 
 .logo {
-    background: url(../images/logo/rbp_logo_black_small.png) left center no-repeat;
+    background: url(../images/logo/rbp_logo_black_small_cropped.png) left center no-repeat;
     width: 4.5rem;
     height: 4.5rem;
     background-size: contain;
